# droidker

./: .env.example  .gitignore  LICENSE  README.md
backend/: Cargo.toml
backend/src/: error.rs  main.rs  seccomp.rs
backend/src/api/: apk.rs  containers.rs  exec.rs  health.rs  logs.rs  mod.rs  screen.rs  stats.rs  upload.rs
backend/src/apk/: bundle.rs  inspect.rs  mod.rs  verify.rs
backend/src/config/: mod.rs  settings.rs
backend/src/container/: cgroups.rs  isolation.rs  manager.rs  mod.rs  network.rs  ports.rs  rootfs.rs  runtime.rs  translation.rs
backend/src/exec/: mod.rs  session.rs
backend/src/humanizer/: gestures.rs  input.rs  mod.rs
backend/src/logs/: mod.rs  streamer.rs
backend/src/models/: container.rs  mod.rs
backend/src/stats/: mod.rs  reader.rs
backend/src/streaming/: audio.rs  capture.rs  encoder.rs  input.rs  mod.rs  server.rs
backend/src/ws/: exec.rs  logs.rs  mod.rs  stats.rs
cli/: Cargo.toml
cli/src/: client.rs  commands.rs  fmt.rs  main.rs
docs/: ARCHITECTURE.md  MILESTONE-2.md  MILESTONE-4.md  MILESTONE-5.md  MILESTONE-6.md  MILESTONE-7.md  MILESTONE-8.md  MILESTONE-9.md
frontend/: package-lock.json  package.json  svelte.config.js  tailwind.config.js  vite.config.ts
frontend/src/: app.css  app.html
frontend/src/lib/api/: api.ts
frontend/src/lib/components/: ContainerCard.svelte  LiveStatsChart.svelte  LogViewer.svelte  ScreenStream.svelte  StatusBadge.svelte  Terminal.svelte  TranslationPanel.svelte  UploadPanel.svelte
frontend/src/lib/stores/: containers.ts
frontend/src/routes/: +layout.svelte  +layout.ts  +page.svelte
frontend/src/routes/containers/: +page.svelte
frontend/src/routes/containers/[id]/: +page.svelte
frontend/src/routes/docs/: +page.svelte
scripts/: build-rootfs.sh  droidkerd.service  install-translation.sh  make-skeleton-rootfs.sh  setup.sh
