[package]
name = "droidker-backend"
version = "0.1.0"
edition = "2021"
authors = ["DroidKer Team"]
description = "DroidKer backend engine - lightweight Android APK container runtime"
license = "MIT"

[[bin]]
name = "droidkerd"
path = "src/main.rs"

[[bin]]
name = "droidker-init"
path = "src/bin/init.rs"

[dependencies]
# Web framework
actix-web = "4.5"
actix-cors = "0.7"
actix-multipart = "0.6"
actix-files = "0.6"

# Async runtime & concurrency
tokio = { version = "1.36", features = ["full"] }
tokio-util = { version = "0.7", features = ["io", "codec"] }
tokio-stream = "0.1"
futures-util = "0.3"

# WebSocket support (for log streaming + interactive exec)
actix-web-actors = "4.3"
actix = "0.13"
bytes = "1.5"
bytestring = "1.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging & tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Unique IDs & time
uuid = { version = "1.7", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Config
config = "0.14"
dotenvy = "0.15"

# System / Linux APIs
nix = { version = "0.27", features = ["sched", "process", "mount", "fs", "user", "signal", "term"] }
libc = "0.2"

# CLI args for daemon mode
clap = { version = "4.5", features = ["derive"] }

# SHA256 for APK hashing
sha2 = "0.10"
hex = "0.4"

# Pure-Rust deflate decoder used by `apk::bundle::extract_bundle` (M9.1).
# We use the `rust_backend` feature so no native zlib is pulled in —
# this keeps the daemon a single self-contained ~6.9 MB binary.
flate2 = { version = "1.0", default-features = false, features = ["rust_backend"] }

# JPEG encoder for screen streaming (pure Rust, no native deps).
# We use the `image` crate only for its pixel-buffer types; the actual
# JPEG encoding goes through `jpeg-encoder` which is ~2-3x faster than
# `image`'s JPEG on x86_64 because it uses SIMD when available.
jpeg-encoder = "0.6"

# Tiny PNG decoder for the `screencap -p` fallback path. We keep this
# optional so a fresh build without streaming support still links.
png = "0.17"

# Lazy static for the global injector map (no extra dependencies —
# once_cell is already pulled in transitively by actix).
once_cell = "1.19"

# Async process management
# (tokio-stream already declared above)

# HTTP client (for health checks)
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
